<resources>
	<string name="app_name">Animee</string>

	<string name="navigation_drawer_open">打开导航栏</string>
	<string name="navigation_drawer_close">关闭导航栏</string>

	<string name="action_settings">设置</string>

	<string name="sunday">日</string>
	<string name="monday">一</string>
	<string name="tuesday">二</string>
	<string name="wednesday">三</string>
	<string name="thursday">四</string>
	<string name="friday">五</string>
	<string name="saturday">六</string>
	
	<string name="drama">番剧</string>
	<string name="count">统计</string>
	
	<string name="setting">设置</string>
	<string name="about">关于</string>
	<string name="delete">删除</string>
	<string name="delete_confirm">确认要删除吗?</string>
	<string name="ok">确认</string>
	
	<string name="episode_format">第{0}话</string>
	<string name="time_format">星期{0} {1}</string>
	<string name="progress_format">第{0}话/共{1}话</string>
	<string name="progress_format2">第{0}话</string>
	<string name="start_format">{0} 星期{1}</string>
	
	<string name="not_start">等待放送</string>
	<string name="fin">完结</string>
	
	<string name="add_success">添加成功</string>
	<string name="add_fail">番剧已经存在</string>
	<string name="cancel_marke">确定取消记录吗?</string>
	<string name="date_format_1">MM-dd</string>
	<string name="date_format_2">MM-dd HH:mm</string>
	<string name="date_format_3">yyyy-MM-dd</string>
	<string name="watched_time_format">{0}({1})</string>
	<string name="episode_list">分集表</string>
	
	<string name="author">作者:BlauHimmel 有问题欢迎到我的Github上留言\nhttps://github.com/BlauHimmel</string>
	
	<string name="refresh">追番目录发生了变换哟</string>
	
	<string name="dialog_name">番剧</string>
	<string name="dialog_date">开播</string>
	<string name="dialog_update">更新</string>
	<string name="dialog_total">总集数</string>
	<string name="dialog_copyright">版权</string>
	<string name="dialog_url">图片URL</string>
	
	<string-array name="copyright">
		<item>Youku</item>
		<item>PPTV</item>
		<item>iQiyi</item>
		<item>Bilibili</item>
		<item>Acfun</item>
		<item>Tencent</item>
		<item>BaiduYun</item>
	</string-array>

</resources>
