<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:card_view="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorBackground"
	android:orientation="vertical">
	
	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="6dp"
		android:clickable="true"
		android:foreground="?attr/selectableItemBackground"
		app:cardBackgroundColor="@color/colorBackground"
		card_view:cardCornerRadius="@dimen/card_corner_radius"
		card_view:cardElevation="@dimen/card_elevation">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/colorBackground"
			android:orientation="vertical"
			android:padding="24dp">
			
			<android.support.design.widget.TextInputLayout
				android:id="@+id/activity_modify_til_url"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="6dp">
				
				<EditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/dialog_url"
					android:textColor="@color/colorWhite"
					android:textColorHint="@color/colorWhite"
					/>
			
			</android.support.design.widget.TextInputLayout>
			
			<android.support.design.widget.TextInputLayout
				android:id="@+id/activity_modify_til_total"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="6dp"
				android:layout_marginTop="6dp">
				
				<EditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/dialog_total"
					android:inputType="numberSigned"
					android:textColor="@color/colorWhite"/>
			
			</android.support.design.widget.TextInputLayout>
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="6dp"
				android:layout_marginTop="12dp"
				android:orientation="horizontal">
				
				<TextView
					android:id="@+id/textView"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:gravity="center"
					android:padding="4sp"
					android:text="@string/dialog_copyright"
					android:textColor="@color/colorWhite"
					android:textSize="18sp"/>
				
				<android.support.v7.widget.AppCompatSpinner
					android:id="@+id/activity_modify_spinner_copyright"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginBottom="8dp"
					android:layout_marginTop="8dp"
					android:popupBackground="@color/colorBackground"
					android:entries="@array/copyright"
					android:gravity="center"
					android:theme="@style/SpinnerTheme"/>
			
			</LinearLayout>
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="14dp"
				android:layout_marginBottom="8dp"
				android:orientation="horizontal">
				
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:gravity="center"
					android:padding="4sp"
					android:text="@string/dialog_date"
					android:textColor="@color/colorWhite"
					android:textSize="18sp"/>
				
				<TextView
					android:id="@+id/activity_modify_tv_date"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:layout_gravity="center_vertical"
					android:padding="4sp"
					android:paddingEnd="16dp"
					android:paddingStart="16dp"
					android:text=""
					android:textColor="@color/colorWhite"
					android:textSize="18sp"/>
				
				<ImageView
					android:id="@+id/activity_modify_iv_select_date"
					android:layout_width="30dp"
					android:layout_height="30sp"
					android:layout_marginEnd="5dp"
					android:layout_gravity="center"
					android:clickable="true"
					android:foreground="?attr/selectableItemBackgroundBorderless"
					android:padding="4sp"
					android:src="@drawable/ic_date"/>
			
			</LinearLayout>
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="14dp"
				android:orientation="horizontal">
				
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:gravity="center"
					android:padding="4sp"
					android:text="@string/dialog_update"
					android:textColor="@color/colorWhite"
					android:textSize="18sp"/>
				
				<TextView
					android:id="@+id/activity_modify_tv_time"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_gravity="center_vertical"
					android:layout_weight="1"
					android:padding="4sp"
					android:paddingEnd="16dp"
					android:paddingStart="16dp"
					android:text=""
					android:textColor="@color/colorWhite"
					android:textSize="18sp"/>
				
				<ImageView
					android:id="@+id/activity_modify_iv_select_time"
					android:layout_width="30sp"
					android:layout_height="30sp"
					android:layout_marginEnd="5dp"
					android:layout_gravity="center"
					android:clickable="true"
					android:foreground="?attr/selectableItemBackgroundBorderless"
					android:padding="4sp"
					android:src="@drawable/ic_time"/>
			
			</LinearLayout>
		
		</LinearLayout>
	
	</android.support.v7.widget.CardView>
	
	<android.support.design.widget.FloatingActionButton
		android:id="@+id/activity_modify_fab_ok"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|end"
		android:layout_margin="@dimen/fab_margin"
		android:clickable="true"
		app:fabSize="normal"
		app:layout_behavior="com.zhouyuming.animee.behavior.ScrollAwareFABBehavior"
		app:srcCompat="@drawable/ic_ok"/>

</android.support.design.widget.CoordinatorLayout>